liyang 7/4 15:53 修改html页面，增加logo文件

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <!-- <link rel="icon" type="image/x-icon" href="<%= BASE_URL %>logo.svg"> -->
+  <link rel="icon" type="image/x-icon" href="logo.ico">
   <title>龙源电力预测系统</title>
 </head>
 
@@ -26,7 +26,6 @@
       </div>
     </div>
   </div>
-  <!-- built files will be auto injected -->
 </body>
 
 </html>
@@ -43,8 +42,7 @@
   .chromeframe {
     margin: .2em 0;
     background: #ccc;
-
-    color: #4ea3fb;
+    color: #2716c7;
     padding: .2em 0
   }
 
@@ -67,7 +65,7 @@
     margin: -75px 0 0 -75px;
     border-radius: 50%;
     border: 3px solid transparent;
-    border-top-color: #4ea3fb;
+    border-top-color: #2716c7;
     -webkit-animation: spin 2s linear infinite;
     -ms-animation: spin 2s linear infinite;
     -moz-animation: spin 2s linear infinite;
@@ -85,7 +83,7 @@
     bottom: 5px;
     border-radius: 50%;
     border: 3px solid transparent;
-    border-top-color: #4ea3fb;
+    border-top-color: #2716c7;
     -webkit-animation: spin 3s linear infinite;
     -moz-animation: spin 3s linear infinite;
     -o-animation: spin 3s linear infinite;
@@ -102,7 +100,7 @@
     bottom: 15px;
     border-radius: 50%;
     border: 3px solid transparent;
-    border-top-color: #4ea3fb;
+    border-top-color: #2716c7;
     -moz-animation: spin 1.5s linear infinite;
     -o-animation: spin 1.5s linear infinite;
     -ms-animation: spin 1.5s linear infinite;
@@ -144,10 +142,10 @@
     width: 100%;
     height: 100%;
     /* global 94%+ browsers support */
-    background: repeating-linear-gradient(50deg, #fff1eb 0%, #ace0f9 100%);
+    background: repeating-linear-gradient(50deg, #ebf6ff 0%, #acb8f941 100%);
 
     /* safari 5.1+,chrome 10+ */
-    background: -webkit-repeating-linear-gradient(50deg, #fff1eb 0%, #ace0f9 100%);
+    background: -webkit-repeating-linear-gradient(50deg, #7391b5 0%, #3A5FCD 100%);
     z-index: 1000;
     -webkit-transform: translateX(0);
     -ms-transform: translateX(0);
@@ -203,7 +201,7 @@
 
   #loader-wrapper .load_title {
     font-family: 'Open Sans';
-    color: #4ea3fb;
+    color: #0b3676;
     font-size: 36px;
     width: 100%;
     text-align: center;
@@ -220,7 +218,7 @@
     font-weight: normal;
     font-style: italic;
     font-size: 26px;
-    color: #4ea3fb;
+    color: #0b3676;
     opacity: .8
   }
 </style>
