--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link rel="icon" type="image/x-icon" href="logo.ico">
+  <script src = "vue.js" type="text/javascript" charset="utf-8"></script>
   <title>龙源电力预测系统</title>
 </head>
 
