--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link rel="icon" type="image/x-icon" href="logo.ico">
   <script src = "https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.min.js" type="text/javascript" charset="utf-8"></script>
-  <title>龙源电力预测系统</title>
+  <title>风电预测系统</title>
 </head>
 
 <body>
