--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -21,7 +21,7 @@
       <div id="loader"></div>
       <div class="loader-section section-left"></div>
       <div class="loader-section section-right"></div>
-      <div class="load_title">正在加载龙源电力预测系统,请耐心等待...
+      <div class="load_title">正在加载风电预测系统,请耐心等待...
         <br>
         <p>v1.0</p>
       </div>
