--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <link rel="icon" type="image/x-icon" href="logo.ico">
+  <link rel="icon" type="image/x-icon" href="./logo.gif">
   <script src = "https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.min.js" type="text/javascript" charset="utf-8"></script>
   <title>风电预测系统</title>
 </head>
