修改加载界面样式位置

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,10 +11,10 @@
 
 <body>
   <div id="app">
-    <div class="logo-container">
+    <div class="center-container">
       <img class="logo-image" src="/logo.gif" alt="logo">
+      <p class="load_title">正在加载风电功率预测及可视化平台,请耐心等待...</p>
     </div>
-    <p class="load_title">正在加载风电功率预测及可视化平台,请耐心等待...</p>
   </div>
   <script type="module" src="/src/main.js"></script>
 </body>
