修改主页面主体布局

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <div id="app">
-    <div class="center-container">
+    <div class="load-container">
       <img class="logo-image" src="/logo.gif" alt="logo">
       <p class="load_title">正在加载风电功率预测及可视化平台,请耐心等待...</p>
     </div>
